Fix application height setting (background svg was cut when scrollbars were present)

--- a/client/src/app/stocks/stock-create/stock-create.component.scss
+++ b/client/src/app/stocks/stock-create/stock-create.component.scss
@@ -1,7 +1,7 @@
 @import '~styles/variables';
 
 .layout {
-  height: 100vh;
+  height: 100%;
 }
 
 .toolbar {
