--- a/client/src/app/stocks/stock-list/stock-list.component.scss
+++ b/client/src/app/stocks/stock-list/stock-list.component.scss
@@ -2,7 +2,7 @@
 
 .stock-list {
   .layout {
-    height: 100vh;
+    height: 100%;
   }
 
   .page-header {
