--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -3,6 +3,7 @@
 @import '~styles/main';
 
 html, body {
+  height: 100vh;
   margin: 0;
   padding: 0;
   font-family: Montserrat, sans-serif;
